# minishell

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  a.out  cd.c  cd.h  check.c  check_path.c  echo.c  echo.h  env.c  env_utils.c  execute.c  execute.h  exit.c  exit.h  exit_code.c  expand.c  expand.h  export.c  ft_split.c  lexer.c  lexer.h  lexer_utils.c  linkedlist_utils.c  minishell  minishell.c  minishell.h  next_line.c  parser.c  parser.h  pipe.c  pipe.h  pwd.c  redirection.c  res_save.c  shell.c  shell.h  (+7 more)
builtins/: builtins.h  cd.c  echo.c  env.c  exit.c  export.c  pwd.c  unset.c
libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_bzero.c  ft_memchr.c  ft_strdup.c  ft_strncmp.c  ft_strnstr.c  ft_stroll.c  get_next_line.c  get_next_line_utils.c  libft.h
libft/printf/: CMakeLists.txt  Makefile  c_print.c  ft_itoa_base.c  i_print.c  p_print.c  printf.c  printf.h  s_print.c  u_print.c  utils_1.c  utils_2.c  utils_3.c  x_print.c
minishell.dSYM/Contents/Resources/DWARF/: minishell
utils/: check.c  check_path.c  execute.c  expand.c  expand_utils.c  export_utils.c  free_utils.c  lexer_extract_utils.c  lexer_utils.c  linkedlist_utils.c  other_utils.c  pipe_utils.c  signals.c  utils.h
